standardized resultant container image and updated README

--- a/challenge2/Dockerfile
+++ b/challenge2/Dockerfile
@@ -1,8 +1,10 @@
-#public gradle image tag supporting multiple platforms
-FROM gradle:7.3.3-jdk17
+# An alpine image is generally smaller in size 
+# and results in increaed deployment speeds and reduced costs.
+# The attack surface is also smaller and is thus preferred for security reasons.
+FROM gradle:7.3.3-jdk17-alpine
 
-# create system user and group "appuser"
-RUN adduser --system --group appuser
+# A non-root user is created and used during runtime for security reasons.
+RUN adduser -D appuser
 
 USER appuser
 COPY --chown=appuser:appuser . /app
